--- a/src/main/resources/org/example/aes/aesapplication.fxml
+++ b/src/main/resources/org/example/aes/aesapplication.fxml
@@ -1,24 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Pos?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.aes.view.AesApplicationController">
-    <VBox alignment="CENTER" spacing="10" padding="20">
-        <Label text="Input Data (hex):"/>
-        <TextField fx:id="inputField" promptText="Input Data (hex)"/>
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.aes.view.AesApplication" spacing="10" padding="20">
+    <!-- Pole tekstowe do wprowadzania danych wejściowych -->
+    <Label text="Dane wejściowe:"/>
+    <TextArea fx:id="inputDataField" promptText="Wprowadź dane wejściowe (ciąg znaków do zaszyfrowania)" prefHeight="100"/>
 
-        <Label text="Encryption Key (hex):"/>
-        <TextField fx:id="keyField" promptText="Encryption Key (hex)"/>
+    <!-- Pole tekstowe do wprowadzania klucza AES -->
+    <Label text="Klucz AES:"/>
+    <TextField fx:id="keyField" promptText="Wprowadź klucz AES (16, 24 lub 32 bajty)"/>
 
-        <Label text="Key Size:"/>
-        <ComboBox fx:id="keySizeComboBox" maxWidth="100"/>
+    <!-- Przycisk do szyfrowania -->
+    <Button fx:id="encryptButton" text="Szyfruj" />
 
-        <Button text="Encrypt" onAction="#handleEncryptAction"/>
+    <!-- Przycisk do deszyfrowania -->
+    <Button fx:id="decryptButton" text="Deszyfruj" />
 
-        <Label text="Encrypted Data (hex):"/>
-        <TextArea fx:id="resultArea" editable="false" promptText="Encrypted Data (hex)" prefRowCount="10" prefColumnCount="40"/>
-    </VBox>
-</AnchorPane>
+    <!-- Przycisk do zapisania wyników do pliku -->
+    <Button fx:id="saveButton" text="Zapisz do pliku" />
+
+    <!-- Przycisk do wczytania danych z pliku -->
+    <Button fx:id="loadButton" text="Wczytaj z pliku" />
+
+    <!-- Przycisk do generowania klucza AES -->
+    <Button fx:id="generateKeyButton" text="Generuj klucz AES" />
+
+    <!-- Etykieta i pole do wyświetlania wyniku -->
+    <Label text="Wynik:"/>
+    <TextArea fx:id="resultArea" editable="false" prefHeight="100"/>
+
+    <!-- Układ przycisków (opcjonalnie) -->
+    <HBox spacing="10">
+        <Button fx:id="encryptButton" text="Szyfruj"/>
+        <Button fx:id="decryptButton" text="Deszyfruj"/>
+    </HBox>
+
+    <HBox spacing="10">
+        <Button fx:id="saveButton" text="Zapisz do pliku"/>
+        <Button fx:id="loadButton" text="Wczytaj z pliku"/>
+    </HBox>
+
+    <HBox spacing="10">
+        <Button fx:id="generateKeyButton" text="Generuj klucz AES"/>
+    </HBox>
+</VBox>
+
+
 
